--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"appid": "wx00362798f0f6d6d6",
+	"appid": "wx5502031d9f2994de",
 	"projectname": "wepy-project",
 	"miniprogramRoot": "./dist",
 	"condition": {
@@ -28,12 +28,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "About",
-					"pathName": "pages/about"
+					"pathName": "pages/about",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "venue",
+					"pathName": "pages/venue"
 				}
 			]
 		}
